# NaoFaceRec

./: CMakeLists.txt  LICENSE  qiproject.xml
build-mytoolchain/: CMakeCache.txt  Makefile  cmake_install.cmake  nfr.cbp
build-mytoolchain/src/: Makefile  cmake_install.cmake
images/: fir
src/: CMakeLists.txt~  edialog.h  faceVACS.cpp  faceVACS.h  idialog.h  main.cpp
